# NeuralCore

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt
backend/: app.py  dependencies.py  main.py  requirements-prod.txt  requirements-worker.txt  requirements.txt  settings.py
backend/a2a/: broker.py  message.py  protocol.py  registry.py  router.py  serializer.py  transport.py  validator.py
backend/agents/: agent_manager.py  coding_agent.py  executor.py  memory_agent.py  orchestrator.py  planner.py  research_agent.py  retrieval_agent.py  tool_agent.py
backend/analytics/: costs.py  dashboards.py  metrics.py  usage.py
backend/api/: dependencies.py  exceptions.py  middleware.py  router.py
backend/auth/: api_keys.py  jwt.py  mfa.py  oauth.py  password.py  permissions.py  roles.py  validators.py
backend/billing/: billing_manager.py  invoices.py  plans.py  pricing.py  subscriptions.py  usage_metering.py
backend/chunking/: ast_chunker.py  base_chunker.py  code_chunker.py  hybrid_chunker.py  markdown_chunker.py  recursive_chunker.py  semantic_chunker.py  token_chunker.py
backend/database/: base.py  connection.py  session.py
backend/embeddings/: base_embedding.py  bge.py  custom.py  e5.py  embedding_factory.py  jina.py  nomic.py  openai.py  sentence_transformers.py
backend/evaluation/: agent_eval.py  benchmark.py  metrics.py  rag_eval.py  report_generator.py  reranking_eval.py  retrieval_eval.py
backend/finetuning/: dataset_builder.py  dataset_cleaner.py  dataset_validator.py  evaluator.py  exporter.py  registry.py  trainer.py
backend/graphrag/: graph_builder.py  graph_context_builder.py  graph_embeddings.py  graph_indexer.py  graph_query_engine.py  graph_reranker.py  graph_retriever.py  graph_search.py  graph_store.py  graph_traversal.py
backend/ingestion/: audio_loader.py  base_loader.py  bitbucket_loader.py  confluence_loader.py  csv_loader.py  discord_loader.py  docx_loader.py  email_loader.py  github_loader.py  gitlab_loader.py  html_loader.py  image_loader.py  jira_loader.py  json_loader.py  loader_factory.py  markdown_loader.py  mongodb_loader.py  mysql_loader.py  notion_loader.py  pdf_loader.py  postgres_loader.py  sitemap_loader.py  slack_loader.py  txt_loader.py  video_loader.py  website_loader.py  xlsx_loader.py  xml_loader.py  youtube_loader.py
backend/knowledge_graph/: graph_builder.py  graph_embeddings.py  graph_retriever.py  graph_search.py  graph_store.py  graph_utils.py
backend/mcp/: client.py  protocol.py  resources.py  server.py  tools.py  transport.py
backend/memory/: episodic.py  long_term.py  memory_manager.py  semantic.py  session.py  short_term.py
backend/model_gateway/: anthropic_provider.py  base_provider.py  deepseek_provider.py  gemini_provider.py  llama_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
backend/monitoring/: alerts.py  healthcheck.py  logging.py  metrics.py  tracing.py
backend/multitenancy/: tenant_context.py  tenant_isolation.py  tenant_limits.py  tenant_manager.py  tenant_resolver.py  tenant_router.py
backend/plugins/: plugin_loader.py  plugin_manager.py  plugin_registry.py  plugin_validator.py
backend/preprocessing/: cleaner.py  deduplicator.py  language_detector.py  metadata_extractor.py  normalizer.py  pii_detector.py
backend/prompt_engine/: context_builder.py  context_compressor.py  prompt_builder.py  template_engine.py  token_optimizer.py
backend/queue/: celery.py  redis.py  worker.py
backend/reranking/: base_reranker.py  bge_reranker.py  cross_encoder.py  hybrid_reranker.py  jina_reranker.py
backend/retrieval/: bm25.py  federated_search.py  graph_search.py  hybrid_retriever.py  metadata_search.py  multimodal_search.py  query_rewriter.py  retriever.py  vector_search.py
backend/services/: email_service.py  invite_service.py  token_service.py
backend/task_queue/: celery.py  scheduler.py  worker.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_chunking.py  test_embeddings.py  test_ingestion.py  test_memory.py  test_retrieval.py
backend/tools/: executor.py  registry.py  schemas.py  validator.py
backend/training/: checkpoint_manager.py  evaluator.py  experiment_tracker.py  exporter.py  model_registry.py  trainer.py
backend/vector_stores/: __init__.py  base.py  elastic.py  faiss.py  milvus.py  pgvector.py  qdrant.py  weaviate.py
backend/workflows/: workflow_builder.py  workflow_engine.py  workflow_executor.py  workflow_registry.py  workflow_runner.py
configs/: agents.yaml  app.yaml  auth.yaml  embeddings.yaml  logging.yaml  model_gateway.yaml  monitoring.yaml  retrieval.yaml  vector_db.yaml
docs/: CHANGELOG.md  LICENSE  agents.md  api.md  architecture.md  deployment.md  embeddings.md  index.md  ingestion.md  memory.md  retrieval.md  security.md
docs/diagrams/: agent_flow.drawio  ingestion_flow.drawio  retrieval_flow.drawio  system_overview.drawio
docs/examples/: enterprise_search.md
frontend/: jest.config.js  jest.setup.js  jsconfig.json  middleware.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: error.jsx  layout.jsx  loading.jsx  not-found.jsx  page.jsx
frontend/context/: AgentContext.jsx  AuthContext.jsx  OrganizationContext.jsx  ProjectContext.jsx  SettingsContext.jsx
frontend/hooks/: useAdmin.js  useAgents.js  useAuth.js  useDatasets.js  useEmbeddings.js  useKnowledgeBases.js  useMonitoring.js  useOrganizations.js  usePipelines.js  usePlugins.js  useProjects.js  usePrompts.js  useReranking.js  useRetrieval.js  useVectorStores.js  useVision.js  useVoice.js  useWorkflows.js  useWorkspaces.js
frontend/lib/: axios.js  constants.js  (+4 more)
rust_engine/: Cargo.toml
rust_engine/benches/: reranker_bench.rs  similarity_bench.rs  tokenizer_bench.rs  vector_index_bench.rs
rust_engine/src/: cache.rs  compression.rs  ffi.rs  lib.rs  main.rs  reranker.rs  similarity.rs  tokenizer.rs  vector_index.rs
(+343 files in other folders)
