[package]
name = "neuralcore_engine"
version = "1.0.0"
edition = "2021"
authors = ["Sambhav Dwivedi <sambhavdwivedi@outlook.com>"]
description = "NeuralCore high-performance Rust engine for vector indexing, similarity computation, reranking acceleration, tokenization, compression, and caching"
license = "LicenseRef-Proprietary"
repository = "https://github.com/sambhavdwivediofficial/NeuralCore"
homepage = "https://www.sambhavdwivedi.in"
readme = "README.md"
keywords = ["ai", "vector-search", "embeddings", "nlp", "machine-learning"]
categories = ["science", "algorithms", "data-structures"]
rust-version = "1.75"

[lib]
name = "neuralcore_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "neuralcore_engine_cli"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["python-bindings", "simd", "compression", "caching"]
python-bindings = ["pyo3", "pyo3/extension-module", "numpy"]
simd = []
compression = ["lz4_flex", "zstd", "snap"]
caching = []
cli = ["clap", "tokio"]
gpu = []
onnx = ["ort"]
profiling = ["pprof"]
benchmarks = ["criterion"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"], optional = true }
numpy = { version = "0.21", optional = true }

ndarray = { version = "0.17", features = ["rayon", "serde"] }
ndarray-linalg = { version = "0.18", features = ["openblas-system"] }
rayon = "1.10"
num_cpus = "1.16"

hashbrown = { version = "0.14", features = ["serde"] }
ordered-float = { version = "4.2", features = ["serde"] }
priority-queue = "1.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3"

lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }
snap = { version = "1.1", optional = true }

rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

thiserror = "1.0"
anyhow = "1.0"

log = "0.4"
env_logger = "0.11"
tracing = "0.1"

parking_lot = { version = "0.12", features = ["send_guard"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = { version = "5.5", features = ["rayon", "serde"] }
arc-swap = "1.7"
atomic = "0.6"

regex = "1.10"
unicode-segmentation = "1.11"
unicode-normalization = "0.1"

once_cell = "1.19"
smallvec = { version = "1.13", features = ["serde", "union"] }
tinyvec = { version = "1.6", features = ["alloc"] }
arrayvec = "0.7"

ort = { version = "2.0.0-rc.2", optional = true, features = ["cuda", "tensorrt"] }
clap = { version = "4.5", optional = true, features = ["derive", "env"] }
tokio = { version = "1.36", optional = true, features = ["full"] }
[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.13", optional = true, features = ["flamegraph", "criterion"] }
criterion = { version = "0.5", optional = true, features = ["html_reports"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
tempfile = "3.10"
rstest = "0.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 4
debug = false

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
incremental = true

[[bench]]
name = "similarity_bench"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "vector_index_bench"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "reranker_bench"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "tokenizer_bench"
harness = false
required-features = ["benchmarks"]

[package.metadata.maturin]
name = "neuralcore_engine"